--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,7 +37,7 @@ jobs:
           name: release
           path: release.tar
 
-  publishrelease:
+  publishreleasetogithub:
     runs-on: windows-2019
     needs: buildrelease
 
