--- a/CommandLineArgumentParser/CommandLineArgumentParser.csproj
+++ b/CommandLineArgumentParser/CommandLineArgumentParser.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <PackageId>CommandLineArgumentParser</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Alvin Seville</Authors>
+    <Company></Company>
+    <Description>
+      Command line argument parser for .NET.
+    </Description>
   </PropertyGroup>
 
 </Project>
