check version script added

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ defaults:
 
 env:
   BUILD_PATH: "CommandLineArgumentParser/bin/Release/net5.0/"
+  CSPROJ_PATH: "CommandLineArgumentParser/CommandLineArgumentParser.csproj"
   NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
 
 jobs:
@@ -52,8 +53,7 @@ jobs:
         
       - name: Set Version
         run: |
-          VERSION=$(echo $'${{ join(github.event.pull_request.labels.*.name, '\n') }}' | grep 'v.*' | head -n 1)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          chmod +x check_version && ./check_version '${{ join(github.event.pull_request.labels.*.name, '\n') }}'
       
       - name: Publish
         if: env.VERSION != ''
@@ -74,8 +74,7 @@ jobs:
 
       - name: Set Version
         run: |
-          VERSION=$(echo $'${{ join(github.event.pull_request.labels.*.name, '\n') }}' | grep 'v.*' | head -n 1)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          chmod +x check_version && ./check_version '${{ join(github.event.pull_request.labels.*.name, '\n') }}'
 
       - name: Publish
         if: env.VERSION != ''
