--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,6 +47,8 @@ jobs:
     needs: buildrelease
 
     steps:
+      - uses: actions/checkout@v2
+
       - name: Download
         uses: actions/download-artifact@v2
         with:
