--- a/CommandLineArgumentParser/CommandLineArgumentParser.csproj
+++ b/CommandLineArgumentParser/CommandLineArgumentParser.csproj
@@ -3,12 +3,13 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <PackageId>CommandLineArgumentParser</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <Authors>Alvin Seville</Authors>
     <Company></Company>
     <Description>
       Command line argument parser for .NET.
     </Description>
+    <Icon>icons/icon.jpg</Icon>
   </PropertyGroup>
 
 </Project>
