--- a/CommandLineArgumentParser/CommandLineArgumentParser.csproj
+++ b/CommandLineArgumentParser/CommandLineArgumentParser.csproj
@@ -12,6 +12,6 @@
     <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="icons\icon.png" Pack="true" PackagePath="\"/>
+    <None Include="..\icons\icon.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
 </Project>
